# crew_estimator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.hypothesis/constants/: 6f7b7d2639931df1  b3be6ef6792aef6a  da39a3ee5e6b4b0d
src/crew_estimator/: estimator.py
tests/: conftest.py  test_estimator.py  test_estimator_hypothesis.py
